# ffmpeg_cmake

./: CMakeLists.txt
src/: decode_video.c
